overflow fix contact

--- a/style/scss/_contact.scss
+++ b/style/scss/_contact.scss
@@ -273,7 +273,7 @@ $media-mobile: 600px;
                 top: 0;
                 width: 100%;
                 height: 100%;
-                overflow: hidden;
+                overflow: auto;
                 background: rgba(0, 0, 0, 0.4);
 
                 animation: popIn 0.3s ease;
